# MCP-converter

./: .env.example  .gitattributes  .gitignore  .taskmasterconfig  .windsurfrules  README.md  install.py  launch_mcp_server.py  main.py  pyproject.toml  requirements-langgraph.txt  requirements.txt  run_tests.py  test_providers.py
.cursor/rules/: dev_workflow.mdc  tool-requirement.mdc  wsl.mdc
.roo/rules/: dev_workflow.md  tool-requirement.md
config/: llm_prompts.json
docs/: CLEANUP_SUMMARY.md  FLEXIBLE_INPUT_GUIDE.md  LANGCHAIN_INTEGRATION_SUMMARY.md  LANGGRAPH_INTEGRATION.md  LLM_PROVIDERS.md  PROJECT_STRUCTURE.md  SIMPLIFIED_WORKFLOW_GUIDE.md  TEST_ORGANIZATION.md
examples/: fast_flights_docs.txt  langchain_mcp_adapter_integration.py  langgraph_integration.py  langgraph_usage_example.py  news_api_docs.txt  provider_usage.py  weather_api_docs.txt
generated_tools/: tool_registry.json  weather_tool.py  weathertool_wrapper.py
generated_tools/fast_flights/: fast_flights_tool.py  fast_flights_wrapper.py  metadata.json  tool.py  wrapper.py
generated_tools/fastflightsoriginal/: metadata.json  tool.py  wrapper.py
generated_tools/fastflightstool/: metadata.json  tool.py  wrapper.py
generated_tools/fastflightstoolv2/: metadata.json  tool.py  wrapper.py
generated_tools/fastflightstoolv3/: metadata.json  tool.py  wrapper.py
generated_tools/fastflightstoolv4/: metadata.json  tool.py  wrapper.py
generated_tools/fastflightstoolv5/: metadata.json  tool.py  wrapper.py
generated_tools/paymenttool/: metadata.json  tool.py  wrapper.py
generated_tools/realweathertool/: metadata.json  tool.py  wrapper.py
generated_tools/simpletest/: metadata.json  tool.py  wrapper.py
generated_tools/stocktool/: metadata.json  tool.py  wrapper.py
generated_tools/testweathertool/: metadata.json  tool.py  wrapper.py
scripts/: prd.txt
search_flights/: search_flights.py
src/: __init__.py  apiclient.py  field_mapper.py  input_parser.py  langgraph_adapter.py  mcp_server.py  mcp_tool.py  normalizer.py  output_generator.py  sandbox.py  tool_generator.py  validator.py  wrapper_generator.py
src/config/: llm_prompts.json
src/core/: __init__.py  tool_generator.py
src/generators/: __init__.py  output_generator.py
src/llm/: __init__.py  input_parser.py
src/server/: __init__.py  langgraph_adapter.py  mcp_server.py
src/utils/: __init__.py  field_mapper.py  normalizer.py  sandbox.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json
tests/: test_apiclient.py  test_fast_flights_tool.py  test_input_parser.py  test_mcp_tool.py  test_output_generator.py  test_weather_tool.py  test_weathertool_wrapper.py
tests/st/: __init__.py  test_integration.py  test_llm_provider_integration.py  test_simplified_workflow.py
tests/ut/: __init__.py  test_apiclient.py  test_field_mapper.py  test_input_parser.py  test_mcp_tool.py  test_normalizer.py  test_output_generator.py  test_sandbox.py  test_validator.py
